# vcpkg-python3-test

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  vcpkg.json
.github/workflows/: ci.yml
